# rustgbg-web-quickstart

./: .env  Cargo.toml  README.md
migrations/2018-09-23-115455_init/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/handlers/: get.rs  mod.rs  post.rs
