[package]
name = "rustgbg-web-quickstart"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
actix = "0.7.4"
actix-web = "0.7.8"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["sqlite", "chrono"] }
dotenv = "0.13.0"
env_logger = "0.5.13"
failure = "0.1.2"
futures = "0.1"
log = "0.4.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.30"
